PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/DimensionToSmallCoCo.par
DimensionToSmallCoCo {
seq main() : Void {

}

stencil test(): [[Int]] res{
    res[INDEX0][INDEX1] = 0
}
}