PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/IncrementOnlyAssignment.par
IncrementOnlyAssignment {

seq main() : Void {
    var Int a = 10
    var Int b = a++
    var Int c = b--
}
}